// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allows a nonce to be supplied 1`] = `
<form
  class="form"
  enctype="application/x-www-form-urlencoded"
>
  <input
    name="nonce"
    type="hidden"
    value="baz"
  />
  foo
</form>
`;

exports[`Renders the form wrapper 1`] = `
<form
  class="form"
  enctype="application/x-www-form-urlencoded"
>
  foo
</form>
`;

exports[`allows the PUT method 1`] = `
<form
  class="form"
  enctype="application/x-www-form-urlencoded"
>
  <input
    name="_method"
    type="hidden"
    value="PUT"
  />
  foo
</form>
`;
